--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -141,11 +141,11 @@
 @media (min-width: 768px) and (max-width: 1024px) {
     .background-container {
         background-size: 100%;
-        height: 90vh;
+        height: 50vh;
     }
 
     .image-row {
-        width: 90%;
+        width: 100%;
     }
 
     .page-title, .page-title2, .page-title3 {
@@ -154,7 +154,7 @@
     }
 
     .page-title2 {
-        top: 80px;
+        top: 65px;
         left: 100px;
     }
 
@@ -184,14 +184,14 @@
     }
 
     .page-title {
-        top: 40px;
+        top: 30px;
         left: 20px;
         font-size: 2rem;
         width: 200px;
     }
     
     .page-title2 {
-        top: 100px;
+        top: 65x;
         left: 60px;
         font-size: 2rem;
         width: 200px;
