--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -239,6 +239,21 @@
     }
 }
 
+@media (min-width: 2560px) { /* 2K és nagyobb */
+    .background-container {
+        background-size: 100%;
+        height: 70vh;
+    }
+  }
+  
+  @media (min-width: 3840px) { /* 4K kijelző */
+    .background-container {
+        background-size: 100%;
+        height: 70vh;
+    }
+  }
+  
+
 @keyframes slideInFromLeft {
     0% {
         transform: translateX(-100%);
