--- a/src/Components/AdminPage/DarkMode.module.css
+++ b/src/Components/AdminPage/DarkMode.module.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #F4F4F4;
+}
+
 .container {
   background-color: #181a1e;
   transition: background-color 0.5s ease, color 0.5s ease;
