--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -239,17 +239,95 @@
     }
 }
 
-@media (min-width: 2560px) { /* 2K és nagyobb */
+@media (min-width: 2048px) { /* 2K és nagyobb */
     .background-container {
         background-size: 100%;
         height: 70vh;
+    }
+    .cardTextNext {
+        color: #ff7f7f;
+        font-family: "Bebas Neue", sans-serif;
+        font-size: clamp(4rem, 2vw, 1.9rem);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        margin: 0;
+        opacity: 1;
+        transform: translateX(0);
+        transition: transform 0.8s ease, opacity 0.8s ease;
+    }
+    .overlay-image {
+        width: 40%;
+        height: auto;
+    }
+    .page-title {
+        top: 20px;
+        left: 60px;
+        font-size: clamp(4rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 400px);
+        padding: 20px 20px 10px 20px;
+    }
+    .page-title2 {
+        top: 100px;
+        left: 160px;
+        font-size: clamp(4rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 400px);
+        padding: 20px 20px 10px 20px;
+    }
+    .page-title3 {
+        top: 20px;
+        left: 60px;
+        font-size: clamp(4rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 400px);
+        padding: 20px 20px 10px 20px;
+
     }
   }
   
   @media (min-width: 3840px) { /* 4K kijelző */
     .background-container {
         background-size: 100%;
-        height: 70vh;
+        height: 90vh;
+    }
+    .cardTextNext {
+        color: #ff7f7f;
+        font-family: "Bebas Neue", sans-serif;
+        font-size: clamp(4rem, 2vw, 1.9rem);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        margin: 0;
+        opacity: 1;
+        transform: translateX(0);
+        transition: transform 0.8s ease, opacity 0.8s ease;
+    }
+    .overlay-image {
+        width: 40%;
+        height: auto;
+    }
+    .page-title {
+        top: 20px;
+        left: 60px;
+        font-size: clamp(4rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 400px);
+        padding: 20px 20px 10px 20px;
+    }
+    .page-title2 {
+        top: 100px;
+        left: 160px;
+        font-size: clamp(4rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 400px);
+        padding: 20px 20px 10px 20px;
+    }
+    .page-title3 {
+        top: 20px;
+        left: 60px;
+        font-size: clamp(4rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 400px);
+        padding: 20px 20px 10px 20px;
+
     }
   }
   
