--- a/src/Components/Slider/Slider.module.css
+++ b/src/Components/Slider/Slider.module.css
@@ -6,11 +6,16 @@
 }
 
 .slider {
-  width: 100%;
-  height: 100%;
-  position: relative;
   display: flex;
   transition: transform 0.5s ease-in-out;
+  width: 100%;
+  height: 100%;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .slide {
@@ -92,6 +97,33 @@
   transform: scale(1.2);
 }
 
+@media only screen and (max-width: 360px){
+  .sliderContainer {
+    height: 70vh !important; /* Mobilon kisebb magasság */
+  }
+}
+
+@media only screen and (min-width: 361px)and (max-width: 400px){
+  .sliderContainer {
+    height: 80vh !important; /* Mobilon kisebb magasság */
+  }
+}
+
+@media only screen and (min-width: 401px)and (max-width: 450px) {
+
+  .sliderContainer {
+    height: 80vh !important; /* Mobilon kisebb magasság */
+  }
+}
+
+
+
+@media only screen and (min-width: 451px) and (max-width: 767px) {
+  .slide {
+    object-fit: cover; 
+  }
+}
+
 /* Mobil nézet */
 @media (max-width: 768px) {
   .navButton {
@@ -119,7 +151,47 @@
   .sliderContainer {
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     overflow: hidden;
   }
 } 
+
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  .sliderContainer {
+    height: 100vh !important; /* Mobilon kisebb magasság */
+  }
+}
+
+@media only screen and (min-width: 2560px) {
+  .slide {
+    position: relative;
+    min-width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .sliderContainer {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+  }
+}
+
+@media only screen and (min-width: 3840px) {
+  .slide {
+    position: relative;
+    min-width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .sliderContainer {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+  }
+}
