--- a/src/Components/ParallaxIntroductorySection/IntroductorySection.module.css
+++ b/src/Components/ParallaxIntroductorySection/IntroductorySection.module.css
@@ -124,4 +124,14 @@
   @media only screen and (min-width: 1200px) {
 
   }
+
+  @media (min-width: 2048px) { /* 2K és nagyobb */
+ 
+    
+  }
+  
+  @media (min-width: 3840px) { /* 4K kijelző */
+
+  }
+  
   
