--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -242,12 +242,12 @@
 @media (min-width: 2048px) { /* 2K és nagyobb */
     .background-container {
         background-size: 100%;
-        height: 70vh;
+        height: 100vh;
     }
     .cardTextNext {
         color: #ff7f7f;
         font-family: "Bebas Neue", sans-serif;
-        font-size: clamp(4rem, 2vw, 1.9rem);
+        font-size: clamp(3rem, 2vw, 1.9rem);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -258,30 +258,34 @@
         transition: transform 0.8s ease, opacity 0.8s ease;
     }
     .overlay-image {
-        width: 40%;
+        width: 35%;
         height: auto;
     }
     .page-title {
         top: 20px;
         left: 60px;
-        font-size: clamp(4rem, 3vw, 2.8rem);
-        width: clamp(150px, 20vw, 400px);
-        padding: 20px 20px 10px 20px;
+        font-size: clamp(3rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 300px);
+        padding: 10px 20px 5px 20px;
     }
     .page-title2 {
-        top: 100px;
+        top: 80px;
         left: 160px;
-        font-size: clamp(4rem, 3vw, 2.8rem);
-        width: clamp(150px, 20vw, 400px);
-        padding: 20px 20px 10px 20px;
+        font-size: clamp(3rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 300px);
+        padding: 10px 20px 5px 20px;
     }
     .page-title3 {
         top: 20px;
         left: 60px;
-        font-size: clamp(4rem, 3vw, 2.8rem);
-        width: clamp(150px, 20vw, 400px);
-        padding: 20px 20px 10px 20px;
+        font-size: clamp(3rem, 3vw, 2.8rem);
+        width: clamp(150px, 20vw, 300px);
+        padding: 10px 20px 5px 20px;
 
+    }
+    .cardTextNext svg {
+        width: 48px; /* 2K felbontás */
+        height: 48px; /* 2K felbontás */
     }
   }
   
@@ -315,7 +319,7 @@
         padding: 20px 20px 10px 20px;
     }
     .page-title2 {
-        top: 100px;
+        top: 110px;
         left: 160px;
         font-size: clamp(4rem, 3vw, 2.8rem);
         width: clamp(150px, 20vw, 400px);
@@ -328,6 +332,10 @@
         width: clamp(150px, 20vw, 400px);
         padding: 20px 20px 10px 20px;
 
+    }
+    .cardTextNext svg {
+        width: 72px; /* 2K felbontás */
+        height: 72px; /* 2K felbontás */
     }
   }
   
