--- a/src/Components/ScrollToTopButton/ScrollToTopButton.module.css
+++ b/src/Components/ScrollToTopButton/ScrollToTopButton.module.css
@@ -48,4 +48,33 @@
     animation: fadeOut 1s ease-in-out forwards;
     pointer-events: none;
   }
+
+  @media (min-width: 2048px) { /* 2K és nagyobb */
+    .scrollToTopButton {
+      background-color: rgb(33, 37, 40, 0.8);
+      border: none;
+      color: white;
+      cursor: pointer;
+      font-size: 24px;
+      padding: 8px 12px;
+      border-radius: 50%;
+      opacity: 0.7;
+      outline: none;
+    }
+  }
+  
+  @media (min-width: 3840px) { /* 4K kijelző */
+    .scrollToTopButton {
+      background-color: rgb(33, 37, 40, 0.8);
+      border: none;
+      color: white;
+      cursor: pointer;
+      font-size: 34px;
+      padding: 24px 36px;
+      border-radius: 50%;
+      opacity: 0.7;
+      outline: none;
+    }
+  }
+  
   
