--- a/src/Components/IntroSection/IntroSection.module.css
+++ b/src/Components/IntroSection/IntroSection.module.css
@@ -244,30 +244,17 @@
 }
 
 @media (min-width: 2048px) { /* 2K és nagyobb */
- 
-    
-}
-
-@media (min-width: 3840px) { /* 4K kijelző */
   .container {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem;
-    max-width: 1500px;
-    margin: 0 auto;
-    gap: 2rem;
-    width: 100%;
-    background-color: #F4F4F4;
-  
-    overflow: hidden;
-    box-sizing: border-box;
+    max-width: 80%; /* Szélesebb legyen, hogy több tartalom férjen el */
+    padding: 4rem; /* Nagyobb padding a tágasabb megjelenéshez */
+  }
+  .leftSection, .rightSection {
+    max-width: 60%; /* Több helyet adunk a tartalomnak */
   }
   .wordCloud {
-    width: 100%;
+    width: 80%;
     height: auto;
-    max-width: 1500px;
+    max-width: 1000px;
     object-fit: contain;
   }
   .leftSection {
@@ -284,5 +271,137 @@
     flex-direction: column;
     gap: 2rem;
     max-width: 50%;
+  }
+  .rectangle {
+    padding: clamp(1rem, 2vw, 2rem);
+    border-radius: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    padding-top: 6rem;
+  }
+  
+  .introductoryText2 {
+    font-family: "Sorts Mill Goudy", serif;
+    font-size: clamp(2rem, 1.5vw, 1.5rem);
+    line-height: 1.6;
+    color: #1f1e1d;
+    margin: 0;
+    text-align: center;
+  }
+  .pinkText {
+    position: absolute;
+    top: 90px;
+    font-size: clamp(2.5rem, 3vw, 2.8rem);
+    font-family: "Bebas Neue";
+    color: #F4F4F4;
+    background-color: #FF7F7F;
+    width: clamp(150px, 20vw, 250px);
+    padding: 15px 0px 5px 0px;
+    text-align: center;
+    align-items: center;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    transform: translateX(0);
+    transition: transform 0.8s ease, opacity 0.8s ease;
+  }
+  
+  .blackText {
+    position: absolute;
+    top: 150px;
+    right: 250px;
+    font-size: clamp(2.5rem, 3vw, 2.8rem);
+    font-family: "Bebas Neue";
+    color: #F4F4F4;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: #473939;
+    width: clamp(150px, 20vw, 250px);
+    padding: 15px 0px 5px 0px;
+    text-align: center;
+    align-items: center;
+    opacity: 1;
+    transform: translateX(0);
+    transition: transform 0.8s ease, opacity 0.8s ease;
+  }
+    
+}
+
+@media (min-width: 3840px) { /* 4K kijelző */
+  .container {
+    max-width: 80%; /* Szélesebb legyen, hogy több tartalom férjen el */
+    padding: 4rem; /* Nagyobb padding a tágasabb megjelenéshez */
+  }
+  .leftSection, .rightSection {
+    max-width: 60%; /* Több helyet adunk a tartalomnak */
+  }
+  .wordCloud {
+    width: 100%;
+    height: auto;
+    max-width: 1200px;
+    object-fit: contain;
+  }
+  .leftSection {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 50%;
+  }
+  
+  .rightSection {
+    flex: 1.4;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    max-width: 50%;
+  }
+  .rectangle {
+    padding: clamp(1rem, 2vw, 2rem);
+    border-radius: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    padding-top: 6rem;
+  }
+  
+  .introductoryText2 {
+    font-family: "Sorts Mill Goudy", serif;
+    font-size: clamp(3.5rem, 1.5vw, 1.5rem);
+    line-height: 1.6;
+    color: #1f1e1d;
+    margin: 0;
+    text-align: center;
+  }
+  .pinkText {
+    position: absolute;
+    top: 90px;
+    font-size: clamp(4rem, 3vw, 2.8rem);
+    font-family: "Bebas Neue";
+    color: #F4F4F4;
+    background-color: #FF7F7F;
+    width: clamp(150px, 20vw, 400px);
+    padding: 15px 0px 5px 0px;
+    text-align: center;
+    align-items: center;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    transform: translateX(0);
+    transition: transform 0.8s ease, opacity 0.8s ease;
+  }
+  
+  .blackText {
+    position: absolute;
+    top: 170px;
+    right: 450px;
+    font-size: clamp(4rem, 3vw, 2.8rem);
+    font-family: "Bebas Neue";
+    color: #F4F4F4;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: #473939;
+    width: clamp(150px, 20vw, 400px);
+    padding: 15px 0px 5px 0px;
+    text-align: center;
+    align-items: center;
+    opacity: 1;
+    transform: translateX(0);
+    transition: transform 0.8s ease, opacity 0.8s ease;
   }
 }
