--- a/src/Components/IntroSection/IntroSection.module.css
+++ b/src/Components/IntroSection/IntroSection.module.css
@@ -166,7 +166,10 @@
   .container {
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    padding-bottom: 4rem;
   }
+
 
   .leftSection {
     order: 2; /* A wordCloudMobile a rectangle alá kerül */
@@ -202,7 +205,7 @@
 
   .rectangle {
     padding: 0rem;
-    padding-top: 0rem;
+    padding-top: 7rem;
   }
   .pinkText {
     position: absolute;
@@ -217,6 +220,14 @@
 
   .arrowContainer {
     bottom: 20px;
+  }
+  .arrowContainer {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: fit-content;
+    z-index: 1;
   }
 }
 
