--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -14,6 +14,11 @@
     overflow-x: hidden;
 }
 
+section:nth-of-type(2n) .page-title {
+    color: green;
+  }
+  
+
 .page-title {
     position: absolute;
     top: 20px;
