--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -208,6 +208,12 @@
         height: 50vh;
     }
 
+    .green-background-container {
+        background-size: 100%;
+        height: 50vh;
+    }
+    
+
     .image-row {
         width: 100%;
     }
