--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -13,23 +13,7 @@
     box-sizing: border-box;
     overflow-x: hidden;
 }
-.green-background-container {
-    background-image: url("../../Assets/CakesPicture/brushBackground.png");
-    background-size: 95%;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
-    background-color: #F4F4F4;
-    box-sizing: border-box;
-    overflow-x: hidden;
-}
 
-  
 
 .page-title {
     position: absolute;
@@ -92,26 +76,9 @@
     transform: translateX(0);
     transition: transform 0.8s ease, opacity 0.8s ease;
 }
-.green-page-title3 {
-    position: absolute;
-    top: 20px;
-    left: 60px;
-    font-size: clamp(1.8rem, 3vw, 2.8rem);
-    font-family: "Bebas Neue";
-    color: #473939;
-    background-color: #9DE0B1;
-    width: clamp(150px, 20vw, 200px);
-    padding: 5px 0px 0px 0px;
-    text-align: center;
-    align-items: center;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    opacity: 1;
-    transform: translateX(0);
-    transition: transform 0.8s ease, opacity 0.8s ease;
-}
 
-.page-title3.animate,
-.green-page-title3.animate {
+
+.page-title3.animate {
     animation: slideInFromLeft 0.8s forwards;
 }
 
@@ -181,22 +148,9 @@
     transform: translateX(0);
     transition: transform 0.8s ease, opacity 0.8s ease;
 }
-.greenCardTextNext {
-    color: #473939;
-    font-family: "Bebas Neue", sans-serif;
-    font-size: clamp(1.2rem, 2vw, 1.9rem);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    margin: 0;
-    opacity: 1;
-    transform: translateX(0);
-    transition: transform 0.8s ease, opacity 0.8s ease;
-}
 
-.cardTextNext.animate,
-.greenCardTextNext.animate
+
+.cardTextNext.animate
 {
     animation: /* slideInFromLeft 0.8s forwards,*/ swing 1s ease-in-out 0.8s;
 }
@@ -218,7 +172,7 @@
         width: 100%;
     }
 
-    .page-title, .page-title2, .page-title3, .green-page-title3 {
+    .page-title, .page-title2, .page-title3 {
         top: 30px;
         left: 40px;
     }
@@ -273,14 +227,14 @@
         width: 200px;
     }
 
-    .page-title3, .green-page-title3 {
+    .page-title3 {
         top: 20px;
         left: 20px;
         font-size: 2.5rem;
         width: 200px;
     }
 
-    .cardTextNext, .greenCardTextNext {
+    .cardTextNext {
         font-size: 2rem;
     }
 
@@ -289,7 +243,7 @@
         bottom: 40px;
     }
 
-    .cardTextNext svg, .greenCardTextNext svg {
+    .cardTextNext svg{
         width: 40px;
         height: 40px;
     }
@@ -305,12 +259,12 @@
         width: 70%;
     }
 
-    .page-title, .page-title2, .page-title3, .green-page-title3 {
+    .page-title, .page-title2, .page-title3 {
         font-size: 2.8rem;
         width: 250px;
     }
 
-    .cardTextNext, .greenCardTextNext {
+    .cardTextNext {
         font-size: 1.9rem;
     }
 }
@@ -320,7 +274,7 @@
         background-size: 100%;
         height: 100vh;
     }
-    .cardTextNext,.greenCardTextNext {
+    .cardTextNext {
         color: #ff7f7f;
         font-family: "Bebas Neue", sans-serif;
         font-size: clamp(3rem, 2vw, 1.9rem);
@@ -357,7 +311,7 @@
         width: clamp(150px, 20vw, 300px);
         padding: 10px 20px 5px 20px;
     }
-    .page-title3, .green-page-title3 {
+    .page-title3 {
         top: 20px;
         left: 60px;
         font-size: clamp(3rem, 3vw, 2.8rem);
@@ -365,7 +319,7 @@
         padding: 10px 20px 5px 20px;
 
     }
-    .cardTextNext svg, .greenCardTextNext svg {
+    .cardTextNext svg {
         width: 48px; /* 2K felbontás */
         height: 48px; /* 2K felbontás */
     }
@@ -376,7 +330,7 @@
         background-size: 100%;
         height: 90vh;
     }
-    .cardTextNext, .greenCardTextNext {
+    .cardTextNext {
         color: #ff7f7f;
         font-family: "Bebas Neue", sans-serif;
         font-size: clamp(4rem, 2vw, 1.9rem);
@@ -413,7 +367,7 @@
         width: clamp(150px, 20vw, 400px);
         padding: 20px 20px 10px 20px;
     }
-    .page-title3, .green-page-title3 {
+    .page-title3 {
         top: 20px;
         left: 60px;
         font-size: clamp(4rem, 3vw, 2.8rem);
