Change yellow color

--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -63,7 +63,8 @@
 }
 
 .page-title-sutemenyek{
-    background-color: #faf066;
+    background-color: #f4d35e;
+    /*background-color: #faf066;*/
     color: #473939;
 }
 
