--- a/src/Components/AdminPage/ImageUploader.module.css
+++ b/src/Components/AdminPage/ImageUploader.module.css
@@ -1,5 +1,3 @@
-
-
 .container {
   height: 100%;
   display: flex;
@@ -467,4 +465,9 @@ button {
 
 /* Large devices (desktops) */
 @media only screen and (min-width: 961px) {
+}
+
+.errorInput {
+  border: 2px solid red; /* Piros szegély a hiba állapotban */
+  background-color: #ffcccc; /* Piros háttér a hiba állapotban */
 }
