--- a/src/Components/PhotoGallery/PhotoGallery.module.css
+++ b/src/Components/PhotoGallery/PhotoGallery.module.css
@@ -60,6 +60,48 @@ html, body {
   background-color: #635252;
 }
 
+@media only screen and (max-width: 360px){
+
+}
+
+@media only screen and (min-width: 361px)and (max-width: 400px){
+    .captionContainer {
+        font-size: 1rem;
+        white-space: nowrap; /* Szöveg ne tördeljen */
+        overflow: hidden; /* Túlcsorduló rész legyen rejtve */
+        text-overflow: ellipsis; /* Három pont az elvágott rész után */
+        max-width: 100%;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+      }
+      .mentesImage {
+        width: 50px;
+        height: auto;
+    }
+}
+
+@media only screen and (min-width: 401px)and (max-width: 450px) {
+    .captionContainer {
+        font-size: 1rem;
+        white-space: nowrap; /* Szöveg ne tördeljen */
+        overflow: hidden; /* Túlcsorduló rész legyen rejtve */
+        text-overflow: ellipsis; /* Három pont az elvágott rész után */
+        max-width: 100%;
+        font-weight: 600;
+        letter-spacing: 1px;
+      }
+      .mentesImage {
+        width: 50px;
+        height: auto;
+    }
+}
+
+
+
+@media only screen and (min-width: 451px) and (max-width: 766px) {
+
+}
+
 @media only screen and (max-width: 767px) {
     .container {
         margin: 0 10px;
@@ -101,3 +143,13 @@ html, body {
     font-size: 18px;
   }
 }
+
+  
+  @media only screen and (min-width: 2560px) {
+
+  }
+  
+  @media only screen and (min-width: 3840px) {
+
+  }
+  
