--- a/src/Components/Layout/CurtainMenu.module.css
+++ b/src/Components/Layout/CurtainMenu.module.css
@@ -5,10 +5,12 @@
   z-index: 10000;
   left: 0;
   top: 3rem;
-  background-color: rgba(0, 0, 0, 0.8);
+
+  backdrop-filter: blur(10px); /* Elmosás a háttéren */
   transition: height 0.5s ease;
   overflow: auto;
 }
+
 
 
 
